desktop_aura: do not restore focused view if it has modal transient child

Changes:
RestoreFocusedView on DesktopNativeWidgetAura::HandleActivationChanged is added to process Linux desktop native widget asynchronous activation. This works when all the child widgets are managed by top level's FocusManager. However, this is not true for modal transient child, whose FocusManager is not the same as top level's FocusManager. In this case on activation, we shall not restore focused view on top level's FocusManager. Instead, the modal transient child window will get activated and restore focused view through its own NativeWidgetAura::OnWindowActivated.

BUG=727641
TEST=emulator test saw bug fixed and added test coverage

Review-Url: https://codereview.chromium.org/2919973002
Cr-Commit-Position: refs/heads/master@{#476835}

Former-commit-id: 81ead2ab2380d5f624b9ce63df050a76de134f06